--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 
 .search-container {
     position: absolute;
-    top: 50%;
+    top: 12.5%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -21,7 +22,7 @@ body {
     width: 75vw;
     height: 50px;
     background-color: rgba(100,100,100,0.2);
-    border-radius: 400px;
+    border-radius: 10px;
 }
 
 .search-container i, .search-container button, .search-container button i {
@@ -52,4 +53,33 @@ button {
     outline: none;
     font-size: 0.8rem;
     color: rgba(255,255,255,0.8);
+}
+
+
+
+.user-infos-container {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 75vw;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(100,100,100,0.2);
+    border-radius: 10px;
+    color: rgba(255,255,255,0.8);
+}
+
+.user-infos {
+    width: 100%;
+}
+
+.user-infos-container h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin: 30px;
 }
