--- a/CSS/main.css
+++ b/CSS/main.css
@@ -83,3 +83,15 @@ button {
     font-weight: 600;
     margin: 30px;
 }
+
+
+
+.github-avatar {
+    width: 100px;
+    height: 100px;
+    margin: 30px;
+    border-radius: 50%;
+    border: rgba(255,255,255,0.8) 1px solid;
+    background-image: url('../Assets/IMG/unknown.png');
+    background-size: contain;
+}
