--- a/CSS/main.css
+++ b/CSS/main.css
@@ -85,13 +85,30 @@ button {
 }
 
 
+.github {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
 
 .github-avatar {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     margin: 30px;
     border-radius: 50%;
     border: rgba(255,255,255,0.8) 1px solid;
     background-image: url('../Assets/IMG/unknown.png');
-    background-size: contain;
+    background-size: cover;
+}
+
+.github-data {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 50px;
+    width: calc(75vw - 240px);
+}
+
+.github-data>* {
+    display: block;
 }
